--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -7,7 +7,7 @@
     <com.wenchao.cardstack.CardStack
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="420dp"
         android:padding = "20dp"
         android:clipChildren="false"
         android:clipToPadding="false"
