--- a/app/src/main/res/layout/fragment_show_card_content.xml
+++ b/app/src/main/res/layout/fragment_show_card_content.xml
@@ -14,24 +14,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:padding="5dp"
             android:id="@+id/textview_title_card"
-            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/primary_text_light"
-            android:fontFamily="sans-serif-condensed"
-            android:layout_gravity="center_horizontal"
-            android:padding="5dp"
-            tools:text="Photo by USERNAME" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:layout_below="@id/textview_title_card"
-            android:background="@color/card_outline"
-            />
+            android:text="Photo by "
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
+            android:layout_gravity="center_horizontal" />
 
         <ImageView
             android:layout_marginTop="5dp"
@@ -42,27 +32,15 @@
             android:adjustViewBounds="true"
              />
 
-        <View
-            android:layout_marginTop="5dp"
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:layout_below="@id/textview_title_card"
-            android:background="@color/card_outline"
-            />
-
         <TextView
-            android:id="@+id/adf"
+            android:padding="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:textColor="@android:color/secondary_text_dark"
-            android:fontFamily="sans-serif-condensed"
-            android:layout_gravity="center_horizontal"
-            android:padding="5dp"
-            tools:text="Praise it!"/>
-
-
+            android:textStyle="bold"
+            android:text="Praise it!"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:layout_gravity="center_horizontal" />
 
         <RatingBar
             android:layout_marginTop="5dp"
