swipe to refresh layout, and pagination in clients photos

--- a/app/src/main/res/layout/fragment_home_photo_list_item.xml
+++ b/app/src/main/res/layout/fragment_home_photo_list_item.xml
@@ -128,7 +128,7 @@
                         android:textSize="14dp" />
                 </LinearLayout>
 
-            </LinearLayout>roid:layout_height="wrap_content"
+            </LinearLayout>
 
         </LinearLayout>
 
