--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,14 +82,14 @@
                 android:background="@android:color/transparent"
                 android:textColor="#0066cc" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="About"
-                android:id="@+id/button"
-                android:layout_gravity="center_horizontal"
-                android:onClick="onClickGetAboutButton"
-                android:layout_marginTop="16dp" />
+            <!--<Button-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="About"-->
+                <!--android:id="@+id/button"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:onClick="onClickGetAboutButton"-->
+                <!--android:layout_marginTop="16dp" />-->
 
         </LinearLayout>
     </ScrollView>
